--- a/views/electronics.pug
+++ b/views/electronics.pug
@@ -1,14 +1,67 @@
 extends layout
 
 block content
- -
- 
+ style.
+    a{
+      height:30px;
+      font-size:12px !important;
+      margin:4px;
+    }
+    .item{
+      position:fixed;
+      bottom:0;
+      z-index:-100
+    }
+    .img1{
+      right:30;
+    }
+    .img2{
+      right:30px;
+
+    }
+    body{
+      background: linear-gradient(rgba(0, 0, 0,0.8),rgba(0, 0, 0,0.8)), url('https://images.pexels.com/photos/777001/pexels-photo-777001.jpeg');
+      background-size:cover;
+      height:100vh;
+      background-repeat:no-repeat;
+    }
+    p{
+      text-align:center;
+      width:100%;
+    }
+    .row{
+      display:flex;
+      justify-content:center
+    }
+    h3{
+      text-align:center;
+      width :100%;
+    }
+    h1{
+      color:white;
+      text-shadow:1px 1px 12px black;
+      text-align:center;
+      margin :30px;
+    }
+    #buttons{
+      border-radius:12px;
+      width:100%;
+      display:flex;
+      flex-wrap:wrap;
+      justify-content:space-evenly
+    }
+    .center{
+      text-align:center;
+      position:relative;
+      top:50%;
+      transform:translateY(-50%);
+    }
 
  h1= title
   .container-fluid 
     .row 
       each electronics  in results
-        div(class="col-sm-2" style=`border:solid 2px black` onclick=`buy(${results.indexOf(electronics)})`) 
+        div(class="col-sm-2" style=`border:solid 2px white` onclick=`buy(${results.indexOf(electronics)})`) 
           p= electronics.Electronic_Name
           p= electronics.Electronic_Origin
           p= electronics.Electronic_ManufacturingYear
