--- a/views/electronicupdate.pug
+++ b/views/electronicupdate.pug
@@ -37,6 +37,6 @@ block content
                 // TODO handle body
                 }).catch((error) => {
                 // TODO handle error
-                alert("Update failed " + error )
+                alert("Update failed Please fill valid details")
                 });
              });
