--- a/views/index.pug
+++ b/views/index.pug
@@ -1,22 +1,11 @@
 extends layout
-
 block content
-  h1= title
-  p Hey, Welcome to Charan Teja's Web-Apps Lab/Assignment-12
-  button(type="button", onClick="doReduce()", class="btn btn-success") Press Me
-  br
-  br
-  div(id="reduce") Reduce the value.
-  br
-  div(id="result") Count 0 with change 0
-  script.
-    let count = 20
-    let change = -1
-    function doReduce() {
-      let resultdiv = document.getElementById('result')
-      console.log("clicked")
-      count = count + change 
-      change =change - 1
-      resultdiv.innerHTML=`Count ${count} with bump ${change}`
-    }
-  br
+ if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+ if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/electronics") Take me to Electronics
+    br
+    a(href="/logout") Logout
